HOMEPAGE > Contact Us Section MOBILE ONLY > correct bug with contact us button not working on mobile

--- a/SCSS/pages/home/_contact.scss
+++ b/SCSS/pages/home/_contact.scss
@@ -312,6 +312,7 @@
         outline: none;
         @include flex(column, center);
         display: none;
+        cursor: pointer;
 
         @include breakpoint("Phone-L") {
             display: flex;
